--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -28,15 +28,15 @@
         "ROS_DOMAIN_ID": "42"
     },
     "runArgs": [
-        "--net=host",
-        "-e", "DISPLAY=${env:DISPLAY}"
+       // "--net=host",
+       // "-e", "DISPLAY=${env:DISPLAY}"
     ],
     "mounts": [
        "source=/tmp/.X11-unix,target=/tmp/.X11-unix,type=bind,consistency=cached",
         "source=/dev/dri,target=/dev/dri,type=bind,consistency=cached",
-        "source=${localWorkspaceFolder}/../cache/humble/build,target=/home/ws/build,type=bind",
-        "source=${localWorkspaceFolder}/../cache/humble/install,target=/home/ws/install,type=bind",
-        "source=${localWorkspaceFolder}/../cache/humble/log,target=/home/ws/log,type=bind"
+        "source=${localWorkspaceFolder}/cache/humble/build,target=/home/ws/build,type=bind",
+        "source=${localWorkspaceFolder}/cache/humble/install,target=/home/ws/install,type=bind",
+        "source=${localWorkspaceFolder}/cache/humble/log,target=/home/ws/log,type=bind"
     ],
     "postCreateCommand": "sudo rosdep update && sudo rosdep install --from-paths src --ignore-src -y && sudo chown -R $(whoami) /home/ws/"
 }
